hello-linode/test-app-3.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: hello-logual
        image: sabirali0279/go-test-app:0.3.3
        ports:
        - containerPort: 8080
        
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        #     memory: 256Mi
        #     cpu: "0.2"
