hello-linode/logual-test-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - blog.logual.cloud
    - shop.logual.cloud
    - logual.cloud
    secretName: logual-tls
  rules:
  - host: blog.logual.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-one
            port:
              number: 80
  - host: shop.logual.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-two
            port:
              number: 80
  - host: logual.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-app
            port:
              number: 80
